--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "test": "jest",
     "lint": "eslint src --ext .ts",
-    "prepare": "npm run build",
+    "prepare": "pnpm run build",
     "setup": "ts-node src/cli/setup.ts",
     "postinstall": "node dist/cli/setup.js"
   },
@@ -32,6 +32,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "inquirer": "^8.2.6",
     "mongodb": "^6.3.0"
   }
